fix: Fix prism code overlapping input

--- a/src/components/ChatInput/ChatInput.module.css
+++ b/src/components/ChatInput/ChatInput.module.css
@@ -15,6 +15,7 @@
     left: 0;
     right: 0;
     bottom: 20px;
+    z-index: 2;
 }
 
 .text_area {
